fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
 html {
 	scroll-behavior: smooth;
 }
-#letsgobb {
-	width: 100vw;
-}
